feat: 增加按钮点击动画, 修复GitBranch上下文菜单没有ResourceManager.setup的问题